2005-10-31  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEntityInspector.m: add inspection of new data and
	  aggregate events and states

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * General/Filter.[hm]: add new query methods to support aggregates
          - (BOOL)isAggregateEntity:(id<PajeEntity>)entity;
          - (unsigned)subCountForEntity:(id<PajeEntity>)entity;
          - (NSColor *)subColorAtIndex:(unsigned)index
                             forEntity:(id<PajeEntity>)entity;
          - (NSString *)subNameAtIndex:(unsigned)index
                             forEntity:(id<PajeEntity>)entity;
          - (double)subDurationAtIndex:(unsigned)index
                             forEntity:(id<PajeEntity>)entity;
          - (unsigned)subCountAtIndex:(unsigned)index
                            forEntity:(id<PajeEntity>)entity;
        * General/PajeEntity.[hm]: add similar methods for entity
        * General/Protocols.h: likewise
        * StorageController/AnchorFilter.m: likewise
        * StorageController/Aggregate{Event,State}.[hm],
          StorageController/{Event,State}Aggregator.[hm]: new classes
        * StorageController/Encapsulate.m: use aggregator classes when
          minDuration is big enough
        * StorageController/GNUmakefile: add new classes

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * StorageController/Encapsulate.m: forgotten change to minDuration

2005-09-30  Benhur Stein <benhur@inf.ufsm.br>
        * General/PajeFilter.[hm]: change entity enumeration method to include
          minDuration hint
          (enumeratorOfEntitiesTyped:inContainer:fromTime:toTime:minDuration:)
        * EntityTypeFilter/EntityTypeSelector.[hm],
          FieldFilter/FieldFilter.[hm], ImbricationFilter/InsetLimit.[hm], 
          ReductionFilter/BusyNode.[hm], StatViewer/StatViewer.m: reflect change
        * SpaceTimeViewer/DrawView+{Drawing,Finding}.m: reflect change